# swagger/authentication_service.yml
@@ -880,6 +880,10 @@ paths:
       responses:
         '200':
           description: ''
+          headers:
+            X-Total-Count:
+              type: integer
+              description: The total number of results matching the query
           schema:
             type: array
             items:
